# Descent3

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: build.yml
